2021-08-12  Kimmo Kinnunen  <kkinnunen@apple.com>

        ANGLE Cocoa compiles parts of HLSL translator, vulkan translator, libgl api, capture redundantly
        https://bugs.webkit.org/show_bug.cgi?id=228986

        Reviewed by Kenneth Russell.

        Remove following from ANGLE (dynamic) target:
        - HLSL translator and tree ops used only by it
        - Vulkan translator output
        - libgl API validation implementation
        - API trace capture implementation (was only partially compiled)

        The features are not part of Cocoa use of ANGLE, and should
        not be compiled as such.
        Does not affect the binary size more than few kilobytes.

        * ANGLE.xcodeproj/project.pbxproj:
        * Configurations/ANGLE-dynamic.xcconfig:

2021-08-11  Kyle Piddington  <kpiddington@apple.com>

        Avoid infinite recursion when command buffer creation fails
        https://bugs.webkit.org/show_bug.cgi?id=228978
        <rdar://79224824>
 
        Reviewed by Kenneth Russell.
 
        In cases where the MTLCommandBuffer is not a valid metal object,
        we can end up in an infinite recursive loop during draw call setup. Refactor setupDraw to take no more than two attempts through the setup function. 

        Testing: Ran WebGL tests, use case samples. Set up synthetic 
        repro forcing bail out path, saw WebGL content fail to render 
        instead of a web process crash.

        * src/libANGLE/renderer/metal/ContextMtl.h:
        * src/libANGLE/renderer/metal/ContextMtl.mm:
        (rx::ContextMtl::setupDraw):
        (rx::ContextMtl::setupDrawImpl):

2021-08-11  Kimmo Kinnunen  <kkinnunen@apple.com>

        Cherry-pick ANGLE: Revise WebGL's shaderSource validation
        https://bugs.webkit.org/show_bug.cgi?id=228951

        Reviewed by Kenneth Russell.

        Cherry-pick ANGLE commit: b4fd46288aa65d61dc9c7140c7d1cdba3f4cdf9a
        From: Kenneth Russell <kbr@chromium.org>
        Date: Wed, 27 Jan 2021 15:56:58 -0800