@@ -1,5 +1,16 @@
 2021-08-12  Kimmo Kinnunen  <kkinnunen@apple.com>
 
+        ANGLE Cocoa compiles contents of ContextEAGL on mac
+        https://bugs.webkit.org/show_bug.cgi?id=228987
+
+        Reviewed by Kenneth Russell.
+
+        Add include guards that are consistent with other EAGL files.
+
+        * src/libANGLE/renderer/gl/eagl/ContextEAGL.cpp:
+
+2021-08-12  Kimmo Kinnunen  <kkinnunen@apple.com>
+
         ANGLE Cocoa compiles parts of HLSL translator, vulkan translator, libgl api, capture redundantly
         https://bugs.webkit.org/show_bug.cgi?id=228986
 
